Amarok ChangeLog
================
(C) 2002-2012 the Amarok authors.

VERSION 2.7-Beta 1
  FEATURES:

  CHANGES:

  BUGFIXES:

VERSION 2.6
  BUGFIXES:
    * Fix problems when sql server is not reachable (BR 298425)
    * Fix crash with exporting playlists with invalid tracks (BR 303056, BR 302607, BR 297816)

VERSION 2.6-RC
  CHANGES:
    * Show all audio and video files in file browser. (BR 303253)
    * Remove codec install support. It's long ago been implemented in phonon.
    * Prevent lags with large Saved playlists. (BR 301700)
    * Increase minimal required ffmpeg version up to 0.7.
    * Use audio-x-generic icon for bit rate, not a generic one. (BR 302753)
    * Add Amarok.Playlist.playMediaList() script bindings for API symmetry.
    * Building the spectrum analyzer applet can now be disabled with a CMake
      argument.

  BUGFIXES:
    * Fix a regression where play count would be increased by 2. (BR 299890)
    * Don't loose statistics, labels and lyrics upon collection scan in some
      circumstances, e.g. when disk holding colleciton is swapped. (BR 298275)
    * Don't loose statistics, labels and lyrics when changing metadata of a
      track (not tagged by afttagger) followed by moving it. (BR 292245)
    * Fix Amarok.Playlist.{add,play}Media() and addMediaList() Qt script
      bindings methods not being able to add playlists. (BR 232697)
    * Add "Last Played" back to the Edit Filter dialog. (BR 302746)
    * Correct rounding for rating in Track Details dialog. (BR 273363)
    * Fix Context view not being fully formed on startup. (BR 292895)
    * Fix memory leaks and a string zero termination issue in MP3tunes.
    * Don't poll for mounts every second, solid notifies us. (BR 289462)
    * Fix inconsistent Last.fm scrobbling in some cases with GStreamer
      backend.
    * Use colors from KDE style in Dynamic Playlist strip. (BR 301303)
    * Finally fix crash on startup in addCollapseAnimation. (BR 258741)