@@ -6,6 +6,7 @@ VERSION 2.7-Beta 1
   FEATURES:
 
   CHANGES:
+    * Optional liblastfm dependency raised to 1.0.0. (BR 302597)
 
   BUGFIXES:
 
